[gd_scene load_steps=5 format=3 uid="uid://cp1kod7c3oexq"]

[ext_resource type="Script" path="res://scripts/ui/program_editor.gd" id="1_cg574"]
[ext_resource type="Script" path="res://scripts/ui/v_loop_container.gd" id="2_s1gjn"]

[sub_resource type="LabelSettings" id="LabelSettings_8vjeu"]

[sub_resource type="LabelSettings" id="LabelSettings_mhm1p"]
font_color = Color(1, 0.57, 0.57, 1)

[node name="ProgramEditor" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cg574")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="InstructionsContainer" type="Container" parent="MarginContainer/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 300)
layout_mode = 2
script = ExtResource("2_s1gjn")

[node name="InstructionUI" parent="MarginContainer/CenterContainer/HBoxContainer/InstructionsContainer" instance_placeholder="res://scenes/ui/instruction_ui.tscn"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/CenterContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "How to modify the program:"

[node name="Label7" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "[^][v] select line"

[node name="Label3" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "[<][>] select target / instruction"

[node name="Label4" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "[E] select / swap"

[node name="Label5" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "[R] reset"

[node name="Label6" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "[Q] cancel / exit"

[node name="Control" type="Control" parent="MarginContainer/CenterContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="DescriptionLabel" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Shoot at paperboy"
label_settings = SubResource("LabelSettings_8vjeu")

[node name="ROLabel" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "This instruction is being executed.
I cannot modify it."
label_settings = SubResource("LabelSettings_mhm1p")

[node name="Control2" type="Control" parent="MarginContainer/CenterContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
